--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -75,102 +75,129 @@
                 <section class="layout">
                     <div class="leftSide"></div>
                     <div class="body">
+                        <h1 class="inptitle">I NOSTRI ABBONAMENTI</h1>
+                        <div class="abbonamenti">
+                            <div class="caselle">
+                                    <img src="../immagini/coming soon.png" />
+                            </div>
+                            <div class="caselle">
+                                <img src="../immagini/coming soon.png" />
+                            </div>
+                            <div class="caselle">
+                                <img src="../immagini/coming soon.png" />
+                            </div>
+                        </div>
+                            <h1 class="inptitle2">I NOSTRI PRODOTTI</h1>
                         <div class="centercaselle">
-                            <a href="serra1base.html">
+                                <a href="serra1base.html">
+                                    <div class="caselle">
+                                        <img class="img" src="immagini/arduino.jpg">
+                                        <figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption>
+                                    </div>
+                                </a>
                                 <div class="caselle">
-                                    <img class="img" src="immagini/arduino.jpg">
-                                    <figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption>
+                                    <a href="arduino.html">
+                                        <img class="img" src="../immagini/arduino.jpg">
+                                        <figcaption>Arduino<br />scheda Arduino 1.0</figcaption>
+                                    </a>
                                 </div>
-                            </a>
-                            <div class="caselle">
-                                <a href="arduino.html">
-                                <img class="img" src="../immagini/arduino.jpg">
-                                <figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
+                                <div class="caselle">
+                                    <a href="breadboard.html">
+                                        <img class="img" src="../immagini/breadboar.jpg">
+                                        <figcaption>Breadboard<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="sensoretemperatura.html">
+                                        <img class="img" src="../immagini/senstemp.jpg">
+                                        <figcaption>Sensore temperatura<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="servomotore.html">
+                                        <img class="img" src="../immagini/servomotore.jpg">
+                                        <figcaption>Servomotore X4<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="sensorediumidità.html">
+                                        <img class="img" src="../immagini/sensum.jpg">
+                                        <figcaption>Sensore di umidità<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="sensorebluetooth.html">
+                                        <img class="img" src="../immagini/bluetht.jpg">
+                                        <figcaption>Modulo bluetooth<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="fotoresistore.html">
+                                        <img class="img" src="../immagini/fotoresistore.jpg">
+                                        <figcaption>Fotoresistore<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="pompadiirrigazione.html">
+                                        <img class="img" src="../immagini/pompa.png">
+                                        <figcaption>Pompa irrigazione<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="powerbank.html">
+                                        <img class="img" src="../immagini/powerbank.jpg">
+                                        <figcaption>Power Bank<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="sensorediumiditànelterreno.html">
+                                        <img class="img" src="../immagini/umterreno.jpg">
+                                        <figcaption>Sensore di umidità nel terreno<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="Ventola.html">
+                                        <img class="img" src="../immagini/ventola.jpg">
+                                        <figcaption>Ventola<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="panelloLCD.html">
+                                        <img class="img" src="../immagini/displaylcd.jpg">
+                                        <figcaption>Panello LCD<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="sensoreultrasuoni.html">
+                                        <img class="img" src="../immagini/sensultrasuoni.jpg">
+                                        <figcaption>Sensore Ultrasuoni<br /><br /></figcaption>
+                                    </a>
+                                </div>
+                                <div class="caselle">
+                                    <a href="relay.html">
+                                        <img class="img" src="../immagini/relay.jpg">
+                                        <figcaption>Relay<br /><br /></figcaption>
+                                    </a>
+                                </div>
+
                             </div>
-                            <div class="caselle">
-                                <a href="breadboard.html">
-                                <img class="img" src="../immagini/breadboar.jpg">
-                                <figcaption>Breadboard<br /><br /></figcaption></a>
+                        </div>
+                        <div class="rightSide"></div>
+                        <div class="footer">
+                            <div id="copyblock">
+                                <div class="copy">
+                                    <h3 class="copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>
+                                </div>
+                                <br />
+                                <div><a href="mailto:sproutassistenza@gmail.com?subject=Assistenza SPROUT" class="contatti">sproutassistenza@gmail.com</a></div>
+                                <div class="contatti2">+39 00000034</div>
                             </div>
-                            <div class="caselle">
-                                <a href="sensoretemperatura.html">
-                                <img class="img" src="../immagini/senstemp.jpg">
-                                <figcaption>Sensore temperatura<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="servomotore.html">
-                                <img class="img" src="../immagini/servomotore.jpg">
-                                <figcaption>Servomotore X4<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="sensorediumidità.html">
-                                <img class="img" src="../immagini/sensum.jpg">
-                                <figcaption>Sensore di umidità<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="sensorebluetooth.html">
-                                <img class="img" src="../immagini/bluetht.jpg">
-                                <figcaption>Modulo bluetooth<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="fotoresistore.html">
-                                <img class="img" src="../immagini/fotoresistore.jpg">
-                                <figcaption>Fotoresistore<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="pompadiirrigazione.html">
-                                <img class="img" src="../immagini/pompa.png">
-                                <figcaption>Pompa irrigazione<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="powerbank.html">
-                                <img class="img" src="../immagini/powerbank.jpg">
-                                <figcaption>Power Bank<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="sensorediumiditànelterreno.html">
-                                <img class="img" src="../immagini/umterreno.jpg">
-                                <figcaption>Sensore di umidità nel terreno<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="Ventola.html">
-                                <img class="img" src="../immagini/ventola.jpg">
-                               <figcaption>Ventola<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="panelloLCD.html">
-                                <img class="img" src="../immagini/displaylcd.jpg">
-                                <figcaption>Panello LCD<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="sensoreultrasuoni.html">
-                                <img class="img" src="../immagini/sensultrasuoni.jpg">
-                                <figcaption>Sensore Ultrasuoni<br /><br /></figcaption></a>
-                            </div>
-                            <div class="caselle">
-                                <a href="relay.html">
-                                <img class="img" src="../immagini/relay.jpg">
-                                <figcaption>Relay<br /><br /></figcaption></a>
-                            </div>
+                            <a href="https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src="../immagini/logo facebook.png" class="imf" /></a>
+                            <a href="https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src="../immagini/logo insta 2.png" class="imi" /></a>
+                            <a href="https://twitter.com/CarpiSprout" target="new_blank"><img src="../immagini/logo twitter.png" class="imt" /></a>
 
                         </div>
-                    </div>
-                    <div class="rightSide"></div>
-                    <div class="footer">
-                        <div id = "copyblock">
-                            <div class="copy">
-                                <h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3> 
-                            </div>
-                            <br />
-                            <div><a href="mailto:sproutassistenza@gmail.com?subject=Assistenza SPROUT"  class="contatti">sproutassistenza@gmail.com</a></div>
-                            <div class="contatti2">+39 00000034</div>
-                        </div>
-                    <a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "../immagini/logo facebook.png" class = "imf" /></a>
-                    <a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "../immagini/logo insta 2.png" class = "imi" /></a>
-                    <a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "../immagini/logo twitter.png" class ="imt" /></a>
-                    
-                    </div>
-                </section>
+</section>
                 </section>
  
     </body>
