--- a/sito/INGLESE/logininglese.html
+++ b/sito/INGLESE/logininglese.html
@@ -16,9 +16,9 @@
 				var password=document.getElementById("password").value;
 				var username=document.getElementById("username").value;
 				if(username.length>=8&&username.length<=20&&password.length>=8) 
-			window.alert("Registrazione completata");
+			window.alert("Registration completed");
 			else{
-				window.alert("Qualcosa è andato storto,controlla il numero di caratteri e riprova");
+				window.alert("Something went wrong, check the number of characters and try again");
 			}
 			}
 	</script>
