--- a/sito/ITALIANO/download.html
+++ b/sito/ITALIANO/download.html
@@ -45,7 +45,7 @@
 						<li>
 						<a class = "lingua">Lingua</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="arduinoallabase.html">Italiano</a></li>
+							<li><a href="download.html">Italiano</a></li>
 							<li><a href="../inglese/downloadinglese.html">Inglese</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
