--- a/sito/INGLESE/logininglese.html
+++ b/sito/INGLESE/logininglese.html
@@ -16,9 +16,9 @@
 				var password=document.getElementById("password").value;
 				var username=document.getElementById("username").value;
 				if(username.length>=8&&username.length<=20&&password.length>=8) 
-			window.alert("Registrazione completata");
+                window.alert("Registration completed");
 			else{
-				window.alert("Qualcosa è andato storto,controlla il numero di caratteri e riprova");
+				window.alert("Something went wrong, check the number of characters and try again");
 			}
 			}
 	</script>
@@ -114,8 +114,8 @@
 				<div class="p">
 					<form >
 						<h1>Sign in</h1>
-						<input type="text" id="username" placeholder="Nome (da 8 a 20 caratteri)" name="username" maxlength="20" minlength="8" required>
-						<input type="password" id="password" placeholder="Password (minimo di 8 caratteri)" name="password" minlength="8" required>
+						<input type="text" id="username" placeholder="Name (8 to 20 characters)" name="username" maxlength="20" minlength="8" required>
+						<input type="password" id="password" placeholder="Password (minimum of 8 characters)" name="password" minlength="8" required>
 						<input type="button" value="Registrati" class="b" onclick="mostraMessaggio()">
 						<!--<button type="submit" name="register">Registrati</button>-->
 					</form>
