--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -79,79 +79,79 @@
 			<div class="leftSide"></div>
 			<div class="body">
 				<div class="centercaselle">
-					<a href="serra1base.html">
 						<div class="caselle">
+							<a href="serra1baseinglese.html">
 							<img class="img" src="immagini/arduino.jpg">
-							<figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption>
+							<figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption></a>
 						</div>
 					</a>
 					<div class="caselle">
-						<a href="arduino.html">
+						<a href="arduinoinglese.html">
 						<img class="img" src="../immagini/arduino.jpg">
 						<figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="breadboard.html">
+						<a href="breadboardinglese.html">
 						<img class="img" src="../immagini/breadboar.jpg">
 						<figcaption>Breadboard<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="sensoretemperatura.html">
+						<a href="sensoretemperaturainglese.html">
 						<img class="img" src="../immagini/senstemp.jpg">
-						<figcaption>Sensore temperatura<br /><br /></figcaption></a>
+						<figcaption>Temperature sensor<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="servomotore.html">
+						<a href="servomotoreinglese.html">
 						<img class="img" src="../immagini/servomotore.jpg">
-						<figcaption>Servomotore X4<br /><br /></figcaption></a>
+						<figcaption>X4 servo motor<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="sensorediumidità.html">
+						<a href="sensorediumiditànelterrenoinglese.html">
 						<img class="img" src="../immagini/sensum.jpg">
-						<figcaption>Sensore di umidità<br /><br /></figcaption></a>
+						<figcaption>Humidity sensor<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="sensorebluetooth.html">
+						<a href="bluetoothinglese.html">
 						<img class="img" src="../immagini/bluetht.jpg">
-						<figcaption>Modulo bluetooth<br /><br /></figcaption></a>
+						<figcaption>Bluetooth module<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="fotoresistore.html">
+						<a href="fotoresistoreinglese.html">
 						<img class="img" src="../immagini/fotoresistore.jpg">
-						<figcaption>Fotoresistore<br /><br /></figcaption></a>
+						<figcaption>Photoresistor<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="pompadiirrigazione.html">
+						<a href="pompairrigazioneinglese.html">
 						<img class="img" src="../immagini/pompa.png">
-						<figcaption>Pompa irrigazione<br /><br /></figcaption></a>
+						<figcaption>Irrigation pump<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="powerbank.html">
+						<a href="powerbankinglese.html">
 						<img class="img" src="../immagini/powerbank.jpg">
 						<figcaption>Power Bank<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="sensorediumiditànelterreno.html">
+						<a href="sensorediumiditànelterrenoinglese.html">
 						<img class="img" src="../immagini/umterreno.jpg">
-						<figcaption>Sensore di umidità nel terreno<br /><br /></figcaption></a>
+						<figcaption>Soil wetness sensor<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="Ventola.html">
+						<a href="Ventolainglese.html">
 						<img class="img" src="../immagini/ventola.jpg">
-					   <figcaption>Ventola<br /><br /></figcaption></a>
+					   <figcaption>Impeller<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="panelloLCD.html">
+						<a href="panelloLCDinglese.html">
 						<img class="img" src="../immagini/displaylcd.jpg">
 						<figcaption>Panello LCD<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="sensoreultrasuoni.html">
+						<a href="sensoreultrasuoniinglese.html">
 						<img class="img" src="../immagini/sensultrasuoni.jpg">
-						<figcaption>Sensore Ultrasuoni<br /><br /></figcaption></a>
+						<figcaption>Ultrasound sensor<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="relay.html">
+						<a href="relayinglese.html">
 						<img class="img" src="../immagini/relay.jpg">
 						<figcaption>Relay<br /><br /></figcaption></a>
 					</div>
