--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -78,82 +78,110 @@
 		<section class="layout">
 			<div class="leftSide"></div>
 			<div class="body">
+				<h1 class="inptitle">SUBSCRIBE</h1>
+				<div class="abbonamenti">
+					<div class="caselle">
+						<img src="../immagini/coming soon.png" />
+					</div>
+					<div class="caselle">
+						<img src="../immagini/coming soon.png" />
+					</div>
+					<div class="caselle">
+						<img src="../immagini/coming soon.png" />
+					</div>
+				</div>
+				<h1 class="inptitle2">OUR PRODUCTS</h1>
 				<div class="centercaselle">
-						<div class="caselle">
-							<a href="serra1baseinglese.html">
+					<div class="caselle">
+						<a href="serra1baseinglese.html">
 							<img class="img" src="immagini/arduino.jpg">
-							<figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption></a>
-						</div>
+							<figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption>
+						</a>
+					</div>
 					</a>
 					<div class="caselle">
 						<a href="arduinoinglese.html">
-						<img class="img" src="../immagini/arduino.jpg">
-						<figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
+							<img class="img" src="../immagini/arduino.jpg">
+							<figcaption>Arduino<br />scheda Arduino 1.0</figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="breadboardinglese.html">
-						<img class="img" src="../immagini/breadboar.jpg">
-						<figcaption>Breadboard<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/breadboar.jpg">
+							<figcaption>Breadboard<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="sensoretemperaturainglese.html">
-						<img class="img" src="../immagini/senstemp.jpg">
-						<figcaption>Temperature sensor<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/senstemp.jpg">
+							<figcaption>Temperature sensor<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="servomotoreinglese.html">
-						<img class="img" src="../immagini/servomotore.jpg">
-						<figcaption>X4 servo motor<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/servomotore.jpg">
+							<figcaption>X4 servo motor<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="sensorediumiditànelterrenoinglese.html">
-						<img class="img" src="../immagini/sensum.jpg">
-						<figcaption>Humidity sensor<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/sensum.jpg">
+							<figcaption>Humidity sensor<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="bluetoothinglese.html">
-						<img class="img" src="../immagini/bluetht.jpg">
-						<figcaption>Bluetooth module<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/bluetht.jpg">
+							<figcaption>Bluetooth module<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="fotoresistoreinglese.html">
-						<img class="img" src="../immagini/fotoresistore.jpg">
-						<figcaption>Photoresistor<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/fotoresistore.jpg">
+							<figcaption>Photoresistor<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="pompairrigazioneinglese.html">
-						<img class="img" src="../immagini/pompa.png">
-						<figcaption>Irrigation pump<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/pompa.png">
+							<figcaption>Irrigation pump<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="powerbankinglese.html">
-						<img class="img" src="../immagini/powerbank.jpg">
-						<figcaption>Power Bank<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/powerbank.jpg">
+							<figcaption>Power Bank<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="sensorediumiditànelterrenoinglese.html">
-						<img class="img" src="../immagini/umterreno.jpg">
-						<figcaption>Soil wetness sensor<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/umterreno.jpg">
+							<figcaption>Soil wetness sensor<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="Ventolainglese.html">
-						<img class="img" src="../immagini/ventola.jpg">
-					   <figcaption>Impeller<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/ventola.jpg">
+							<figcaption>Impeller<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="panelloLCDinglese.html">
-						<img class="img" src="../immagini/displaylcd.jpg">
-						<figcaption>Panello LCD<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/displaylcd.jpg">
+							<figcaption>Panello LCD<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="sensoreultrasuoniinglese.html">
-						<img class="img" src="../immagini/sensultrasuoni.jpg">
-						<figcaption>Ultrasound sensor<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/sensultrasuoni.jpg">
+							<figcaption>Ultrasound sensor<br /><br /></figcaption>
+						</a>
 					</div>
 					<div class="caselle">
 						<a href="relayinglese.html">
-						<img class="img" src="../immagini/relay.jpg">
-						<figcaption>Relay<br /><br /></figcaption></a>
+							<img class="img" src="../immagini/relay.jpg">
+							<figcaption>Relay<br /><br /></figcaption>
+						</a>
 					</div>
 
 				</div>
