--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -75,7 +75,7 @@
                 <section class="layout">
                     <div class="leftSide"></div>
                     <div class="body">
-                        <h1 class="inptitle">I NOSTRI ABBONAMENTI</h1>
+                        <h1 class="inptitle">ABBONAMENTI</h1>
                         <div class="abbonamenti">
                             <div class="caselle">
                                     <img src="../immagini/coming soon.png" />
