--- a/sito/INGLESE/Ventolainglese.html
+++ b/sito/INGLESE/Ventolainglese.html
@@ -101,12 +101,12 @@
             <div class="body">
                 <div>
                     <img class="imgdettaglio2" src="../immagini/ventola.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Impeller </div>
+                    <div class="titolodettaglio2"> Fan </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">The impeller is a small device equipped with a rotor, which, driven by a motor, moves a flow of air.</p>
-                        <p class="aprezzo">0,50 &euro;</p>
+                        <p class="testobase">The fan is a small device equipped with a rotor, which, driven by a motor, moves a flow of air.</p>
+                        <p class="aprezzo">0,99 &euro;</p>
                         <div class="abuy3">
                             <p><strong>BUY</strong></p>
                         </div>
