--- a/sito/INGLESE/indexinglese.html
+++ b/sito/INGLESE/indexinglese.html
@@ -43,7 +43,7 @@
 						<a class="lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 						<ul>
 							<!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="../italiano/index.html">Italiano</a></li>
+							<li><a href="../index.html">Italiano</a></li>
 							<li><a href="indexinglese.html">Inglese</a></li>
 						</ul> <!-- Fine del sotto-menu -->
 					</li> <!-- Chiudo il list-item -->
@@ -102,7 +102,7 @@
 			<div class="leftSide"></div>
 			<div class="body">
 				<h1 class="homee animate__animated animate__flipInX animate__delay-1s">THIS IS SPROUT</h1>
-				<h3 class="home2 animate__animated animate__flipInX animate__delay-1s">video presentation of the company</h3>
+				<h3 class="home2 animate__animated animate__flipInX animate__delay-1s">Video presentation of the company</h3>
 				<div class="videoserra  animate__animated animate__fadeIn animate__delay-2s">
 					<video width="850px" height="500px" controls>
 						<source src="Paolo.mp4" type="video/mp4">
