--- a/sito/INGLESE/sensoreultrasuoniinglese.html
+++ b/sito/INGLESE/sensoreultrasuoniinglese.html
@@ -105,8 +105,8 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">The ultrasonic sensor is able to detect objects without contact and measure their distance from the sensor, sending high frequency sound pulses.</p>
-                        <p class="aprezzo">0,80 &euro;</p>
+                        <p class="testobase">The ultrasound sensor is able to detect objects without contact and measure their distance from the sensor, sending high frequency sound pulses.</p>
+                        <p class="aprezzo">1,99 &euro;</p>
                         <div class="abuy3">
                             <p><strong>BUY</strong></p>
                         </div>
