--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -60,7 +60,7 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href = "index.html">HOME</a>
+					<a href = "../index.html">HOME</a>
 				</div>
 				<div class="testo">
 					<a href="modellografico.html" >GRAFICI</a>
