--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -49,7 +49,7 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
                 <div class="testo">
-                    <a href = "index.html">HOME</a>
+                    <a href = "../index.html">HOME</a>
                 </div>
                 <div class="testo">
                     <a href="modellografico.html" class="grafico">GRAFICI</a>
@@ -114,7 +114,7 @@
                             <p class="pno">Scelta colore vetro(trasparente o no)</p>
                             <p class="pno">Pellicola anti-marcimento</p>
                             <hr class="ahr" />
-                            <p class="aprezzo">159,99 €</p>
+                            <p class="aprezzo">149,99 €</p>
                         </div>
 
                         <div class="a1">
@@ -143,7 +143,7 @@
                             <p class="pno">Scelta colore vetro(trasparente o no)</p>
                             <p class="pno">Pellicola anti-marcimento</p>
                             <hr class="ahr" />
-                            <p class="aprezzo">199,99 €</p>
+                            <p class="aprezzo">169,99 €</p>
                         </div>
                         <div class="a1">
 
@@ -172,7 +172,7 @@
                             <p class="ap">Scelta colore vetro(trasparente o no)</p>
                             <p class="ap">Pellicola anti-marcimento</p>
                             <hr class="ahr" />
-                            <p class="aprezzo">269,99 €</p>
+                            <p class="aprezzo">199,99 €</p>
                         </div>
                         <div class="abuy">
                             <p><strong>COMPRA</strong></p>
