--- a/sito/INGLESE/arduinoinglese.html
+++ b/sito/INGLESE/arduinoinglese.html
@@ -72,7 +72,7 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Menù di navigazione-->
+            <!--Menï¿½ di navigazione-->
             <div class="testo">
                 <a href="indexinglese.html">HOME</a>
             </div>
@@ -106,7 +106,7 @@
                 <div>
                     <div class="rt">
                         <p class="testobase">Arduino is a hardware system composed of a series of electronic boards equipped with an 8-bit AVR microprocessor.</p>
-                        <p class="aprezzo">4,99 &euro;</p>
+                        <p class="aprezzo">7,99 &euro;</p>
                         <div class="abuy3">
                             <p><strong>BUY</strong></p>
                         </div>
