--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="..." />
 	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
 	<link href="../style.css" type="text/css" rel="stylesheet" />
+	<link href="../italiano/inp.css" type="text/css" rel="stylesheet" />
 	<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 	<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
@@ -124,7 +125,7 @@
 						</a>
 					</div>
 					<div class="caselle">
-						<a href="sensorediumiditànelterrenoinglese.html">
+						<a href="sensoreumiditainglese.html">
 							<img class="img" src="../immagini/sensum.jpg">
 							<figcaption>Humidity sensor<br /><br /></figcaption>
 						</a>
