--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -50,7 +50,7 @@
       <div id="menu">
           <!--Menù di navigazione-->
           <div class="testo">
-              <a href="index.html">HOME</a>
+              <a href="../index.html">HOME</a>
           </div>
           <div class="testo">
               <a href="modellografico.html">GRAFICI</a>
