--- a/sito/index.html
+++ b/sito/index.html
@@ -7,11 +7,11 @@
 	<meta name="author" content="3ci diurno" />
 	<meta name="description" content="..." />
 	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-	<link href="../style.css" type="text/css" rel="stylesheet" />
-	<link href="home.css" type="text/css" rel="stylesheet" />
+	<link href="style.css" type="text/css" rel="stylesheet" />
+	<link href="italiano/home.css" type="text/css" rel="stylesheet" />
 	<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 	<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-	<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
+	<link rel="icon" type="image/x-icon" href="immagini/logo.png">
 </head>
 
 
@@ -23,7 +23,7 @@
 		<hr class = "a" />   
 			<div id="title"> <!--titolo del sito-->
 				<div class ="logo">
-					<img src = "../immagini/logo.png">
+					<img src = "immagini/logo.png">
 				</div>
 				
 				<div class = "name">
@@ -40,7 +40,7 @@
 						<a class = "lingua">Lingua</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
 							<li><a href="index.html">Italiano</a></li>
-							<li><a href="../inglese/indexinglese.html">Inglese</a></li>
+							<li><a href="inglese/indexinglese.html">Inglese</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
 						<!--qui altri list-item -->
@@ -74,19 +74,19 @@
 					<a href = "index.html" class = "menuz">HOME</a>
 				</div>
 				<div class="testo">
-					<a href="modellografico.html">GRAFICI</a>
+					<a href="italiano/modellografico.html">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="chisiamo.html">CHI SIAMO</a>
+					<a href="italiano/chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
-				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
+				  <a href ="italiano/inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="download.html">DOWNLOAD</a>
+					<a href="italiano/download.html">DOWNLOAD</a>
 				</div>
 				<div class="testo">
-					<a href="login.html">LOGIN</a>
+					<a href="italiano/login.html">LOGIN</a>
 				</div>
 				<hr class = "a" />
       </div>
@@ -114,9 +114,9 @@
 							<div><a href="mailto:sproutassistenza@gmail.com?subject=Assistenza SPROUT"  class="contatti">sproutassistenza@gmail.com</a></div>
 							<div class="contatti2">+39 00000034</div>
 						</div>
-					<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "../immagini/logo facebook.png" class = "imf" /></a>
-					<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "../immagini/logo insta 2.png" class = "imi" /></a>
-					<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "../immagini/logo twitter.png" class ="imt" /></a>
+					<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "immagini/logo facebook.png" class = "imf" /></a>
+					<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "immagini/logo insta 2.png" class = "imi" /></a>
+					<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "immagini/logo twitter.png" class ="imt" /></a>
 					
 					</div>
 				</section>
