--- a/sito/index.html
+++ b/sito/index.html
@@ -97,7 +97,7 @@
 					<div class="leftSide"></div>
 					<div class="body">
 						<h1 class="homee animate__animated animate__flipInX animate__delay-1s">QUESTA E' LA SPROUT</h1>
-						<h3 class="home2 animate__animated animate__flipInX animate__delay-1s">video presentazione dell'azienda</h3>
+						<h3 class="home2 animate__animated animate__flipInX animate__delay-1s">Video presentazione dell'azienda</h3>
 						<div class="videoserra  animate__animated animate__fadeIn animate__delay-2s">
 							<video width="850px" height="500px"  controls>
 								<source src="../immagini/Paolo.mp4" type="video/mp4">
