--- a/sito/INGLESE/graficiinglese.html
+++ b/sito/INGLESE/graficiinglese.html
@@ -69,8 +69,8 @@
 					<div class="body">
               <h1 class="titgrafici">DATA AND STATISTICS</h1>
               <div class="chartBox">
-                <p class="testograf">On this page you will find all the graphs relating to the data collected by Arduino. <br /> This graph represents the median, the mode and the average of the humidity in the greenhouse within a month.</P><div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div> <!--id del primo grafico myChart-->
-                <p class="testograf">This graph represents the median, mode and average of the temperature in the greenhouse over a month.</p><div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div>
+                <p class="testograf">On this page you will find all the graphs relating to the data collected by Arduino. <br /> This graph represents the median, the mode and the average of the humidity in the greenhouse within two weeks.</P><div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div> <!--id del primo grafico myChart-->
+                <p class="testograf">This graph represents the median, mode and average of the temperature in the greenhouse over two weeks.</p><div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div>
                 </div>
       </div>
 					<div class="rightSide"></div>
