--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -69,8 +69,8 @@
 					<div class="body">
               <h1 class="titgrafici">DATI E STATISTICHE</h1>
               <div class="chartBox">
-                <p class="testograf">In questa pagina troverete tutti i grafici relativi ai dati raccolti da Arduino.<br />Questo grafico rappresenta la mediana, la moda e la media dell'umidit&aacute; nella serra nell'arco di un mese.</P><div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div> <!--id del primo grafico myChart-->
-                <p class="testograf">Questo grafico rappresenta la mediana, la moda e la media della temperatura nella serra nell'arco di un mese.</p><div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div>
+                <p class="testograf">In questa pagina troverete tutti i grafici relativi ai dati raccolti da Arduino.<br />Questo grafico rappresenta la mediana, la moda e la media dell'umidit&aacute; nella serra nell'arco di due settimane.</P><div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div> <!--id del primo grafico myChart-->
+                <p class="testograf">Questo grafico rappresenta la mediana, la moda e la media della temperatura nella serra nell'arco di due settimane.</p><div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div>
                 </div>
       </div>
 					<div class="rightSide"></div>
