--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -163,7 +163,7 @@
 					<div class="caselle">
 						<a href="Ventolainglese.html">
 							<img class="img" src="../immagini/ventola.jpg">
-							<figcaption>Impeller<br /><br /></figcaption>
+							<figcaption>Fan<br /><br /></figcaption>
 						</a>
 					</div>
 					<div class="caselle">
